<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintlayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@color/md_theme_surfaceBright"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:background="@color/md_theme_background_mediumContrast"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/crime_title"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="183dp"
                android:text="@string/crime_title"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/crime_Photo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/crime_Photo"
                app:layout_constraintTop_toTopOf="@+id/crime_Photo"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/crime_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/crime_date"
                android:textSize="14sp"
                app:layout_constraintBottom_toTopOf="@+id/crime_Photo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/crime_date3"
                android:layout_width="180dp"
                android:layout_height="25dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="Case number: 4578"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/crime_Photo"
                app:layout_constraintTop_toBottomOf="@+id/crime_title"
                app:layout_constraintVertical_bias="0.0" />

            <ImageButton
                android:id="@+id/btn_crime_solved"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@null"
                android:contentDescription="@string/solving_crimes_des"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/textView2"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/crime_date3"
                app:layout_constraintVertical_bias="0.333"
                app:srcCompat="@drawable/ic_solved_item"
                tools:ignore="TouchTargetSizeCheck" />

            <ImageView
                android:id="@+id/crime_Photo"
                android:layout_width="68dp"
                android:layout_height="68dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="40dp"
                android:background="@color/md_theme_scrim"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/priorityIndicator"
                android:layout_width="68dp"
                android:layout_height="25dp"
                android:background="@drawable/back_priority"
                app:layout_constraintBottom_toTopOf="@+id/crime_Photo"
                app:layout_constraintEnd_toEndOf="@+id/crime_Photo"
                app:layout_constraintStart_toStartOf="@+id/crime_Photo"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="Solved"
                app:layout_constraintBottom_toBottomOf="@+id/btn_crime_solved"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.951"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toTopOf="@+id/btn_crime_solved"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="20:18"
                android:textColor="@color/md_theme_scrim_highContrast"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/crime_date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/crime_date"
                app:layout_constraintTop_toTopOf="@+id/crime_date"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:text="Medium"
                app:layout_constraintBottom_toBottomOf="@+id/priorityIndicator"
                app:layout_constraintEnd_toEndOf="@+id/priorityIndicator"
                app:layout_constraintStart_toStartOf="@+id/priorityIndicator"
                app:layout_constraintTop_toTopOf="@+id/priorityIndicator" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>